fix: alignment in blog

--- a/styles/pages/blog/quotes.scss
+++ b/styles/pages/blog/quotes.scss
@@ -7,10 +7,5 @@
 .blog__quotes__text {
 	@extend %description-28;
 
-	max-width: 100rem;
 	text-align: center;
-
-	@include media('<phone') {
-		max-width: 32.8rem;
-	}
 }
